Changed source compatibility back to 1.8. Using default thread factory instead of NamedThreadFactory. Replaced Timer with ScheduledExecutorService.